// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conduit-client-credentials-middleware with audience should return a middleware 1`] = `
[
  {
    "accessToken": "access_token",
    "audience": "https://identity.lindorm-io",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067210000,
  },
]
`;

exports[`conduit-client-credentials-middleware with audience should return a middleware with new data 1`] = `
[
  {
    "accessToken": "access_token",
    "audience": "https://identity.lindorm-io",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "audience": "https://test.lindorm.io",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
]
`;

exports[`conduit-client-credentials-middleware with audience should return middleware with cached data 1`] = `
[
  {
    "accessToken": "access_token",
    "audience": "https://identity.lindorm-io",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067210000,
  },
]
`;

exports[`conduit-client-credentials-middleware with audience should return middleware with timeout data 1`] = `
[
  {
    "accessToken": "access_token",
    "audience": "https://identity.lindorm-io",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
]
`;

exports[`conduit-client-credentials-middleware without audience should return a middleware 1`] = `
[
  {
    "accessToken": "access_token",
    "audience": "https://identity.lindorm-io",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "audience": "https://test.lindorm.io",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "audience": "_@DEFAULT",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
]
`;

exports[`conduit-client-credentials-middleware without audience should return middleware with cached data 1`] = `
[
  {
    "accessToken": "access_token",
    "audience": "https://identity.lindorm-io",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "audience": "https://test.lindorm.io",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "audience": "_@DEFAULT",
    "issuer": "https://lindorm.eu.auth0.com/",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
]
`;
